<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:gravity="center"
              android:layout_height="match_parent">


    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/aboutVersionTextView"
        android:text="@string/app_version"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/made_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/made_by1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/made_by2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/made_by3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="Dibuat Untuk Tugas Akhit Interoprablitas dan PAPB2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>